--- a/src/components/_config.scss
+++ b/src/components/_config.scss
@@ -1,14 +1,14 @@
 $text: #fff;
 $textSecondary: #9cb3c9;
 
+$primaryLight: #2b5a88;
+$primary: #1f4061;
+$primaryDark: #19344e;
+
 $errorRed: #d64d96;
 $green: #3cd483;
-
-$indigoLight: #1f364d;
-$indigo: #0f273d;
-$indigoDark: #0c2033;
 
 $blue: #4997e5;
 $blueDark: #457cb2;
 
-$boxShadow: 0px 0px 20px 0px $indigoLight;
+$boxShadow: 0px 0px 20px 0px $primaryLight;
