--- a/src/components/common/Header.scss
+++ b/src/components/common/Header.scss
@@ -5,7 +5,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: $indigo;
+    background-color: $primary;
     width: 100%;
     height: 5rem;
 
@@ -16,7 +16,10 @@
         width: 100px;
 
         @media (max-width: 700px) {
-            display: none;
+            //display: none;
+            top: 25px;
+            left: 5px;
+            width: 75px;
         }
     }
 }
