--- a/src/components/details/Details.scss
+++ b/src/components/details/Details.scss
@@ -26,7 +26,7 @@
 
             .detailsValue {
                 border-radius: 20px;
-                background-color: $indigoLight;
+                background-color: $primaryLight;
                 font-size: 14px;
                 padding: 8px 12px;
                 margin-left: 10px;
