--- a/src/components/list/Table.scss
+++ b/src/components/list/Table.scss
@@ -1,4 +1,3 @@
-//TODO: Sort colors with config.scss
 @import '../config';
 
 .tableContainer {
@@ -9,7 +8,7 @@
     border-collapse: collapse;
     border-spacing: 0;
     &Head {
-      background-color: $indigoDark;
+      background-color: $primaryDark;
       tr th {
         padding: 10px 20px;
         color: $textSecondary;
@@ -21,10 +20,10 @@
 
     &Body {
       text-align: left;
-      background-color: $indigo;
+      background-color: $primary;
       tr td {
         padding: 24px 20px;
-        border-bottom: 2px solid $indigoDark;
+        border-bottom: 2px solid $primaryDark;
         color: $text;
         cursor: pointer;
 
